Added hover effects on images

--- a/index.html
+++ b/index.html
@@ -123,21 +123,21 @@
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3">
                     <div class="col">
                         <a href="projects/marvelsnap.html">
-                            <div class="card shadow">
+                            <div class="card">
                                 <img src="images/thumbnails/thumbnail_projects_marvel_snap.png" class="card-img" alt="thumbnail_projects_marvel_snap.png">
                             </div>
                         </a>
                     </div>
                     <div class="col">
                         <a href="projects/fictif.html">
-                            <div class="card shadow">
+                            <div class="card">
                                 <img src="images/thumbnails/thumbnail_projects_fictif.png" class="card-img" alt="thumbnail_projects_fictif.png">
                             </div>
                         </a>
                     </div>
                     <div class="col">
                         <a href="projects/potionsplease.html">
-                            <div class="card shadow">
+                            <div class="card">
                                 <img src="images/thumbnails/thumbnail_projects_potions_please.png" class="card-img" alt="thumbnail_projects_potions_please.png">
                             </div>
                         </a>
@@ -160,35 +160,35 @@
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3">
                     <div class="col">
                         <a href="projects/lindolphosboxofephemera.html">
-                            <div class="card shadow">
+                            <div class="card">
                                 <img src="images/thumbnails/thumbnail_projects_lindolpho_box_of_ephemera.png" class="card-img" alt="thumbnail_projects_lindolpho_box_of_ephemera.png">
                             </div>
                         </a>
                     </div>
                     <div class="col">
                         <a href="projects/stepstoneisland.html">
-                            <div class="card shadow">
+                            <div class="card">
                                 <img src="images/thumbnails/thumbnail_projects_stepstone_island.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
                             </div>
                         </a>
                     </div>
                     <div class="col">
                         <a href="projects/discobear.html">
-                            <div class="card shadow">
+                            <div class="card">
                                 <img src="images/thumbnails/thumbnail_projects_disco_bear.png" class="card-img" alt="thumbnail_projects_disco_bear.png">
                             </div>
                         </a>
                     </div>
                     <div class="col">
                         <a href="projects/duos.html">
-                            <div class="card shadow">
+                            <div class="card">
                                 <img src="images/thumbnails/thumbnail_projects_duos.png" class="card-img" alt="thumbnail_projects_duos.png">
                             </div>
                         </a>
                     </div>
                     <div class="col">
                         <a href="projects/pipelinegame.html">
-                            <div class="card shadow">
+                            <div class="card">
                                 <img src="images/thumbnails/thumbnail_projects_the_pipeline_game.png" class="card-img" alt="thumbnail_projects_the_pipeline_game.png">
                             </div>
                         </a>
