--- a/projects/discobear.html
+++ b/projects/discobear.html
@@ -12,7 +12,7 @@
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
         crossorigin="anonymous"
         />
-        <link href="css/style.css" rel="stylesheet" />
+        <link href="../css/style.css" rel="stylesheet" />
         <script src="../js/colorpicker.js"></script>
     </head>
 
@@ -176,8 +176,10 @@
                                 <div class="col">
                                     <div class="display-3 mb-3">Disco Bear</div>
                                 </div>
-                                <div class="col mx-2">
-                                        <img src="../images/badges/indiecade-seal2017.png" width="100px" class="float-end" alt="indiecade-seal2017.png"/>
+                                <div class="col mx-2 img-box">
+                                    <a href="../images/badges/indiecade-seal2017.png" data-toggle="lightbox">
+                                        <img src="../images/badges/indiecade-seal2017.png" width="100px" class="float-end" alt="../images/badges/indiecade-seal2017.png"/>
+                                    </a>
                                  </div>
                             </div>
                             <div class="row py-3">
@@ -192,7 +194,7 @@
                                         It is available to play for free in browser at <a href="https://www.discobeargame.com/" class="text-decoration-none">www.discobeargame.com</a>.
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/discobear/gallery_05.png" data-toggle="lightbox">
                                         <img src="../images/projects/discobear/gallery_05.png" class="img-fluid mx-auto d-block rounded" alt="gallery_05.png"/>
                                     </a>
@@ -216,22 +218,22 @@
                                 </div>
                             </div>
                             <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-3 pb-5 border-bottom">
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/discobear/gallery_01.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/discobear/thumbnails/thumbnail_gallery_01.png" class="img-fluid rounded" alt="gallery_01.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/discobear/gallery_02.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/discobear/thumbnails/thumbnail_gallery_02.png" class="img-fluid rounded" alt="gallery_02.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/discobear/gallery_03.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/discobear/thumbnails/thumbnail_gallery_03.png" class="img-fluid rounded" alt="gallery_03.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/discobear/gallery_04.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/discobear/thumbnails/thumbnail_gallery_04.png" class="img-fluid rounded" alt="gallery_04.png">
                                     </a>
@@ -337,19 +339,19 @@
                                     </p>
                                 </div>
                                 <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3">
-                                    <div class="col">
+                                    <div class="col img-box">
                                         <a href="../images/projects/discobear/narrative_01.jpeg" data-toggle="lightbox" data-gallery="narrative-gallery">
                                             <img src="../images/projects/discobear/thumbnails/thumbnail_narrative_01.png" class="img-fluid rounded" alt="narrative_01.jpeg"/>
                                         </a>
                                         <figcaption class="figure-caption text-center py-3">Developing Disco Bear in the Unity Game Engine.</figcaption>
                                     </div>
-                                    <div class="col">
+                                    <div class="col img-box">
                                         <a href="../images/projects/discobear/narrative_03.png" data-toggle="lightbox" data-gallery="narrative-gallery">
                                             <img src="../images/projects/discobear/thumbnails/thumbnail_narrative_03.png" class="img-fluid rounded" alt="narrative_03.png">
                                         </a>
                                         <figcaption class="figure-caption text-center py-3">A screenshot of the Disco Bear macro document.</figcaption>
                                     </div>
-                                    <div class="col">
+                                    <div class="col img-box">
                                         <a href="../images/projects/discobear/narrative_02.jpeg" data-toggle="lightbox" data-gallery="narrative-gallery">
                                             <img src="../images/projects/discobear/thumbnails/thumbnail_narrative_02.png" class="img-fluid rounded" alt="narrative_02.jpeg">
                                         </a>
@@ -376,7 +378,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/discobear/music_and_sound_01.png" data-toggle="lightbox">
                                         <img src="../images/projects/discobear/music_and_sound_01.png" class="img-fluid rounded" alt="music_and_sound_01.png">
                                     </a>
@@ -402,7 +404,7 @@
                                         player through the story even if they decided not to interact.
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/discobear/playtest_01.jpeg" data-toggle="lightbox">
                                         <img src="../images/projects/discobear/playtest_01.jpeg" class="img-fluid rounded" alt="playtest_01.jpeg"/>
                                     </a>
@@ -440,22 +442,22 @@
                                     </p>
                                 </div>
                                 <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pb-5">
-                                    <div class="col">
+                                    <div class="col img-box">
                                         <a href="../images/projects/discobear/presentation_01.jpeg" data-toggle="lightbox" data-gallery="presentation-gallery">
                                             <img src="../images/projects/discobear/thumbnails/thumbnail_presentation_01.png" class="img-fluid rounded" alt="presentation_01.jpeg">
                                         </a>
                                     </div>
-                                    <div class="col">
+                                    <div class="col img-box">
                                         <a href="../images/projects/discobear/presentation_02.jpeg" data-toggle="lightbox" data-gallery="presentation-gallery">
                                             <img src="../images/projects/discobear/thumbnails/thumbnail_presentation_02.png" class="img-fluid rounded" alt="presentation_02.jpeg">
                                         </a>
                                     </div>
-                                    <div class="col">
+                                    <div class="col img-box">
                                         <a href="../images/projects/discobear/presentation_03.jpeg" data-toggle="lightbox" data-gallery="presentation-gallery">
                                             <img src="../images/projects/discobear/thumbnails/thumbnail_presentation_03.png" class="img-fluid rounded" alt="presentation_03.jpeg">
                                         </a>
                                     </div>
-                                    <div class="col">
+                                    <div class="col img-box">
                                         <a href="../images/projects/discobear/presentation_04.jpeg" data-toggle="lightbox" data-gallery="presentation-gallery">
                                             <img src="../images/projects/discobear/thumbnails/thumbnail_presentation_04.png" class="img-fluid rounded" alt="presentation_04.jpeg">
                                         </a>
