--- a/projects/duos.html
+++ b/projects/duos.html
@@ -12,7 +12,7 @@
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
         crossorigin="anonymous"
         />
-        <link href="css/style.css" rel="stylesheet" />
+        <link href="../css/style.css" rel="stylesheet" />
         <script src="../js/colorpicker.js"></script>
     </head>
 
@@ -170,9 +170,11 @@
                                 <div class="col">
                                     <div class="display-3 mb-3">DuOS</div>
                                 </div>
-                                <div class="col mx-2">
-                                        <img src="../images/badges/indiePrizeNominee2017.png" width="100px" class="float-end" alt="indiePrizeNominee2017.png"/>
-                                 </div>
+                                <div class="col mx-2 img-box">
+                                    <a href="../images/badges/indiePrizeNominee2017.png" data-toggle="lightbox">
+                                        <img src="../images/badges/indiePrizeNominee2017.png" width="100px" class="float-end" alt="../images/badges/indiePrizeNominee2017.png"/>
+                                    </a>
+                                </div>
                             </div>
                             <div class="row py-3">
                                 <div class="col-md-6">
@@ -183,7 +185,7 @@
                                         interesting characters. However, are these characters friends or are they foes?
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/duos/gallery_05.png" data-toggle="lightbox">
                                         <img src="../images/projects/duos/gallery_05.png" class="img-fluid mx-auto d-block rounded" alt="gallery_05.png"/>
                                     </a>
@@ -191,22 +193,22 @@
                             </div>
                             
                             <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-4 pb-5 border-bottom">
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/duos/gallery_01.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/duos/thumbnails/thumbnail_gallery_01.png" class="img-fluid rounded" alt="gallery_01.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/duos/gallery_02.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/duos/thumbnails/thumbnail_gallery_02.png" class="img-fluid rounded" alt="gallery_02.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/duos/gallery_03.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/duos/thumbnails/thumbnail_gallery_03.png" class="img-fluid rounded" alt="gallery_03.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/duos/gallery_04.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/duos/thumbnails/thumbnail_gallery_04.png" class="img-fluid rounded" alt="gallery_04.png">
                                     </a>
@@ -255,7 +257,7 @@
                                         After that we would test the puzzle ourselves and make adjustments accordingly.
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/duos/puzzle-design-01.gif" data-toggle="lightbox">
                                         <img src="../images/projects/duos/puzzle-design-01.gif" class="img-fluid rounded" alt="puzzle-design-01.gif">
                                     </a>
@@ -284,7 +286,7 @@
                                         </ul>
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/duos/rite-test-01.png" data-toggle="lightbox">
                                         <img src="../images/projects/duos/rite-test-01.png" class="img-fluid rounded" alt="rite-test-01.png">
                                     </a>
