--- a/projects/lindolphosboxofephemera.html
+++ b/projects/lindolphosboxofephemera.html
@@ -12,7 +12,7 @@
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
         crossorigin="anonymous"
         />
-        <link href="css/style.css" rel="stylesheet" />
+        <link href="../css/style.css" rel="stylesheet" />
         <script src="../js/colorpicker.js"></script>
     </head>
 
@@ -178,7 +178,7 @@
                                         This project is available to play for free on <a href="https://kpustolski.itch.io/lindolphos-box-of-ephemera" class="text-decoration-none">itch.io.</a>
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/lindolphoboxofephemera/gallery_01.png" data-toggle="lightbox">
                                         <img src="../images/projects/lindolphoboxofephemera/gallery_01.png" class="img-fluid mx-auto d-block rounded" alt="gallery_01.png"/>
                                     </a>
@@ -186,22 +186,22 @@
                             </div>
                             
                             <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-4 pb-5 border-bottom">
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/lindolphoboxofephemera/gallery_02.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/lindolphoboxofephemera/thumbnails/thumbnail_gallery_02.png" class="img-fluid rounded" alt="thumbnail_gallery_02.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/lindolphoboxofephemera/gallery_03.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/lindolphoboxofephemera/thumbnails/thumbnail_gallery_03.png" class="img-fluid rounded" alt="thumbnail_gallery_03.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/lindolphoboxofephemera/gallery_04.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/lindolphoboxofephemera/thumbnails/thumbnail_gallery_04.png" class="img-fluid rounded" alt="thumbnail_gallery_04.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/lindolphoboxofephemera/gallery_05.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/lindolphoboxofephemera/thumbnails/thumbnail_gallery_05.png" class="img-fluid rounded" alt="thumbnail_gallery_05.png">
                                     </a>
@@ -223,7 +223,7 @@
                                         Born in 1896, Lindolpho was a journalist and writer from Brazil who published his first book and biography at the age of 98 years old, four years before his death at age 102. He was chosen for the rich stories and accounts he left behind in his book, and his great-granddaughters' wish to explore his legacy and the history of their German ancestors' migration to Brazil. While our main source of inspiration was his book, we also interviewed one of his last remaining daughters and explored a large archive of photos, footage and memorabilia different members of the family have kept along the years. 
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/lindolphoboxofephemera/about_01.png" data-toggle="lightbox">
                                         <img src="../images/projects/lindolphoboxofephemera/about_01.png" class="img-fluid rounded" alt="about_01.png">
                                     </a>
