--- a/projects/pipelinegame.html
+++ b/projects/pipelinegame.html
@@ -12,7 +12,7 @@
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
         crossorigin="anonymous"
         />
-        <link href="css/style.css" rel="stylesheet" />
+        <link href="../css/style.css" rel="stylesheet" />
         <script src="../js/colorpicker.js"></script>
     </head>
 
@@ -175,7 +175,7 @@
                                         orientation for about a year or so after its completion.
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/pipelinegame/pipelineGame_6.png" data-toggle="lightbox">
                                         <img src="../images/projects/pipelinegame/pipelineGame_6.png" class="img-fluid mx-auto d-block rounded" alt="pipelineGame_6.png"/>
                                     </a>
@@ -183,22 +183,22 @@
                             </div>
                             
                             <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-4 pb-5">
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/pipelinegame/pipelineGame_3.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/pipelinegame/thumbnails/thumbnail_pipelineGame_3.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_pipelineGame_3.png"/>
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/pipelinegame/pipelineGame_5.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/pipelinegame/thumbnails/thumbnail_pipelineGame_5.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_pipelineGame_5.png"/>
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/pipelinegame/pipelineGame_2.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/pipelinegame/thumbnails/thumbnail_pipelineGame_2.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_pipelineGame_2.png"/>
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/pipelinegame/pipelineGame_4.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/pipelinegame/thumbnails/thumbnail_pipelineGame_4.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_pipelineGame_4.png"/>
                                     </a>
