--- a/projects/potionsplease.html
+++ b/projects/potionsplease.html
@@ -12,7 +12,7 @@
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
         crossorigin="anonymous"
         />
-        <link href="css/style.css" rel="stylesheet" />
+        <link href="../css/style.css" rel="stylesheet" />
         <script src="../js/colorpicker.js"></script>
     </head>
 
@@ -179,7 +179,7 @@
                                         Potions Please! had a limited release and unfortunetly was shelved before it was fully released prior to Nix Hydra's acquisition by <a href="https://home.dorian.live/" class="text-decoration-none">Dorian.live</a>.
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/potionsplease/gallery_01.png" data-toggle="lightbox">
                                         <img src="../images/projects/potionsplease/gallery_01.png" class="img-fluid mx-auto d-block rounded" alt="gallery_01.png"/>
                                     </a>
@@ -187,23 +187,23 @@
                             </div>
                             
                             <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-4 pb-5">
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/potionsplease/gallery_02.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/potionsplease/thumbnails/thumbnail_gallery_02.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_02.png"/>
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/potionsplease/gallery_04.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/potionsplease/thumbnails/thumbnail_gallery_04.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_04.png"/>
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/potionsplease/gallery_05.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/potionsplease/thumbnails/thumbnail_gallery_05.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_05.png"/>
                                     </a>
 
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                         <a href="../images/projects/potionsplease/gallery_03.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/potionsplease/thumbnails/thumbnail_gallery_03.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_03.png"/>
                                     </a>
