--- a/projects/stepstoneisland.html
+++ b/projects/stepstoneisland.html
@@ -12,7 +12,7 @@
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
         crossorigin="anonymous"
         />
-        <link href="css/style.css" rel="stylesheet" />
+        <link href="../css/style.css" rel="stylesheet" />
         <script src="../js/colorpicker.js"></script>
     </head>
 
@@ -181,8 +181,10 @@
                                 <div class="col">
                                     <div class="display-3 mb-3">Stepstone Island</div>
                                 </div>
-                                <div class="col mx-2">
+                                <div class="col mx-2 img-box">
+                                    <a href="../images/badges/2018_selection_seal_orange_250x250px.png" data-toggle="lightbox">
                                         <img src="../images/badges/2018_selection_seal_orange_250x250px.png" width="100px" class="float-end" alt="2018_selection_seal_orange_250x250px.png"/>
+                                    </a>
                                  </div>
                             </div>
                             </div>
@@ -202,7 +204,7 @@
                                         November 2020.
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/stepstone_island_poster_720x960.png" data-toggle="lightbox">
                                         <img src="../images/projects/stepstoneisland/stepstone_island_poster_720x960.png" class="img-fluid mx-auto d-block rounded" alt="stepstone_island_poster_720x960.png" width="400"/>
                                     </a>
@@ -255,42 +257,42 @@
                             </div>
 
                             <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-3 pb-5 border-bottom">
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gallery_01.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_01.png" class="img-fluid rounded" alt="gallery_01.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gallery_02.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_02.png" class="img-fluid rounded" alt="gallery_02.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gallery_03.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_03.png" class="img-fluid rounded" alt="gallery_03.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gallery_04.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_04.png" class="img-fluid rounded" alt="gallery_04.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gallery_05.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_05.png" class="img-fluid rounded" alt="gallery_05.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gallery_06.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_06.png" class="img-fluid rounded" alt="gallery_06.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gallery_07.gif" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_07.png" class="img-fluid rounded" alt="gallery_07.gif">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gallery_08.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_08.png" class="img-fluid rounded" alt="gallery_08.png">
                                     </a>
@@ -326,7 +328,7 @@
                                         Visual Studio, SourceTree, and GitHub.
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/NC8JAmMvvS0?si=gwkNYaK_WyzbtuGF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 </div>
                             </div>
@@ -362,7 +364,7 @@
                                         Visual Studio, SourceTree, and GitHub.
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/ideation_01.png" data-toggle="lightbox">
                                         <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_ideation_01.png" class="img-fluid mx-auto d-block rounded" alt="ideation_01" width="350"/>
                                     </a>
@@ -396,19 +398,19 @@
                                 </div>
                             </div>
                             <div class="row row-cols-2 row-cols-lg-3 g-2 g-lg-3 py-3">
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gdd_prototype_01.png" data-toggle="lightbox" data-gallery="gdd-early-prototype-gallery">
                                         <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_gdd_prototype_01.png" class="img-fluid rounded" alt="gdd_prototype_01.png">
                                     </a>
                                     <figcaption class="figure-caption text-center py-3">This is a screenshot of a prototype from Feb. 2017. In this version, events would be triggered depending on the data you pull from a FitBit wristband.</figcaption>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gdd_prototype_02.png" data-toggle="lightbox" data-gallery="gdd-early-prototype-gallery">
                                         <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_gdd_prototype_02.png" class="img-fluid rounded" alt="gdd_prototype_02.png">
                                     </a>
                                     <figcaption class="figure-caption text-center py-3">This is a screenshot of a prototype from April. 2017. In this version, Players would have to tap on the cows to make them active and then they would collide with trees to make sticks, another virtual resource.</figcaption>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gdd_prototype_03.jpeg" data-toggle="lightbox" data-gallery="gdd-early-prototype-gallery">
                                         <img src="../images/projects/stepstoneisland/gdd_prototype_03.jpeg" class="img-fluid rounded" alt="gdd_prototype_03.jpeg">
                                     </a>
@@ -435,7 +437,7 @@
                                         fully unlocked until their first visit to the island.
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gdd_gameloop_04.png" data-toggle="lightbox">
                                         <img src="../images/projects/stepstoneisland/gdd_gameloop_04.png" class="img-fluid rounded" alt="gdd_gameloop_04.png"/>
                                     </a>
@@ -458,13 +460,13 @@
                                 </div>
                             </div>
                             <div class="row row-cols-2 g-2 g-lg-3 py-3">
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gdd_character_design_01.png" data-toggle="lightbox" data-gallery="gdd-character-design-gallery">
                                         <img src="../images/projects/stepstoneisland/gdd_character_design_01.png" class="img-fluid rounded" alt="gdd_character_design_01.png">
                                     </a>
                                     <figcaption class="figure-caption text-center py-3">Early concepts of the characters (by Steven Sugar).</figcaption>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gdd_character_design_02.png" data-toggle="lightbox" data-gallery="gdd-character-design-gallery">
                                         <img src="../images/projects/stepstoneisland/gdd_character_design_02.png" class="img-fluid rounded" alt="gdd_character_design_02.png">
                                     </a>
@@ -481,19 +483,19 @@
                                 </div>
                             </div>
                             <div class="row row-cols-2 row-cols-lg-3 g-2 g-lg-3 py-3">
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gdd_concept_art_01.png" data-toggle="lightbox" data-gallery="gdd-concept-art-gallery">
                                         <img src="../images/projects/stepstoneisland/gdd_concept_art_01.png" class="img-fluid rounded" alt="gdd_concept_art_01.png">
                                     </a>
                                     <figcaption class="figure-caption text-center py-3">Early concepts of the island (by Steven Sugar).</figcaption>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gdd_concept_art_02.png" data-toggle="lightbox" data-gallery="gdd-concept-art-gallery">
                                         <img src="../images/projects/stepstoneisland/gdd_concept_art_02.png" class="img-fluid rounded" alt="gdd_concept_art_02.png">
                                     </a>
                                     <figcaption class="figure-caption text-center py-3">Stepstone Island has an invisible tile map made up of hexagonal tiles, which allows us to track which items are placed where. We decided to use hexagons instead of squares to make the island less rigid and more organic (by Steven Sugar).</figcaption>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gdd_concept_art_03.png" data-toggle="lightbox" data-gallery="gdd-concept-art-gallery">
                                         <img src="../images/projects/stepstoneisland/gdd_concept_art_03.png" class="img-fluid rounded" alt="gdd_concept_art_03.png">
                                     </a>
@@ -534,7 +536,7 @@
                                         for the iPhone X aspect ratio after finding that the canvas didn't scale correctly.
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gdd_playtesting_01.png" data-toggle="lightbox">
                                         <img src="../images/projects/stepstoneisland/gdd_playtesting_01.png" class="img-fluid rounded" alt="gdd_playtesting_01.png"/>
                                     </a>
@@ -546,7 +548,7 @@
                                     <p>
                                         I took a screenshot every week over the course of development to show progress over time. All work in progress pictures can be found in this google slideshow (TBD).
                                     </p>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/gdd_wip_01.png" data-toggle="lightbox">
                                         <img src="../images/projects/stepstoneisland/gdd_wip_01.png" class="img-fluid rounded" alt="gdd_wip_01.png"/>
                                     </a>
@@ -572,7 +574,7 @@
                                         the <span class="fw-bold">IndieCade Showcase @ E3</span> in June 2018.
                                     </p>
                                 </div>
-                                <div class="col">
+                                <div class="col img-box">
                                     <a href="../images/projects/stepstoneisland/presentation_01.jpeg" data-toggle="lightbox">
                                         <img src="../images/projects/stepstoneisland/presentation_01.jpeg" class="img-fluid mx-auto d-block rounded" alt="presentation_01.jpeg"/>
                                     </a>
