--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         <main>
             <div class="container my-5">
                 <div class="row row-cols-1 pb-3">
-                    <h1>Professional Projects</h1>
-                    <h3 class="text-body-secondary fw-light fst-italic ">Released projects that I have contributed to at various studios.</h3>
+                    <div class="section-header">Professional Projects</div>
+                    <div class="text-body-secondary fw-light fst-italic ">Released projects that I have contributed to at various studios.</div>
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3">
                     <div class="col">
@@ -154,8 +154,8 @@
 
             <div class="container my-5">
                 <div class="row row-cols-1 pb-3">
-                    <h1>Personal Projects</h1>
-                    <h3 class="text-body-secondary fw-light fst-italic ">A curated list of old student projects, game jam games, etc.</h3>
+                    <div class="section-header">Personal Projects</div>
+                    <div class="text-body-secondary fw-light fst-italic ">A curated list of old student projects, game jam games, etc.</div>
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3">
                     <div class="col">
